--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
-    "@angular/fire": "^6.0.2",
+    "@angular/fire": "6.0.0",
     "@angular/forms": "~9.1.6",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/crop": "^5.27.0",
     "@ionic-native/file": "^5.27.0",
+    "@ionic-native/image-resizer": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -32,6 +33,7 @@
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-file": "^6.0.2",
     "firebase": "^7.16.1",
+    "info.protonet.imageresizer": "^0.1.1",
     "natives": "^1.1.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -79,7 +81,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "info.protonet.imageresizer": {}
     },
     "platforms": [
       "android"
