--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-file": "^6.0.2",
-    "firebase": "^7.16.1",
+    "firebase": "^7.15.5",
     "info.protonet.imageresizer": "^0.1.1",
+    "moment": "^2.27.0",
     "natives": "^1.1.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
