--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-res": "^0.15.1",
+    "cordova-sqlite-storage": "^5.0.1",
     "firebase": "^7.15.5",
     "info.protonet.imageresizer": "^0.1.1",
     "moment": "^2.27.0",
@@ -83,7 +86,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
-      "info.protonet.imageresizer": {}
+      "info.protonet.imageresizer": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
